--- a/conferences.html
+++ b/conferences.html
@@ -16,7 +16,7 @@
           <tr>
             <td style="vertical-align: top; text-align: center;
               font-family: Avenir Book; width: 16%; color: black;
-              background-color: white;"><a href="default.html"
+              background-color: white;"><a href="index.html"
                 style="text-decoration: none;"><span style="color:
                   black;">ABOUT</span></a> </td>
             <td style="vertical-align: top; text-align: center;
@@ -72,7 +72,7 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
-              Oberseminar Dynamics</a>, Technische Universität München,
+              Oberseminar Dynamics</a>, Technische UniversitÃ¤t MÃ¼nchen,
             Nov. 3, 2025. <br>
           </li>
           <li>Collaboration on Mathematical and Scientific Foundations
@@ -244,7 +244,7 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
                   0px; background-color: rgb(255, 255, 255);
                   text-decoration: none; display: inline !important;
                   float: none;"><a moz-do-not-send="true"
-                    href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+                    href="https://applied-topology-school.eventos.cimat.mx">CIMAT-MÃ©rida
 
 
 
@@ -313,7 +313,7 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
                         -webkit-text-stroke-width: 0px;
                         background-color: rgb(255, 255, 255);
                         text-decoration: none; display: inline
-                        !important; float: none;">Mérida, Mexico, Nov.
+                        !important; float: none;">MÃ©rida, Mexico, Nov.
                         7-12, 2024.</span></span></span></span>
                 <meta charset="UTF-8">
               </span> </span><br>
@@ -2430,7 +2430,7 @@ href="http://dept.math.lsa.umich.edu/seminars_events/events.php?eventdefid=9&amp
                     0px; background-color: rgb(255, 255, 255);
                     text-decoration: none; display: inline !important;
                     float: none;"><a moz-do-not-send="true"
-                      href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+                      href="https://applied-topology-school.eventos.cimat.mx">CIMAT-MÃ©rida
 
 
 
@@ -2502,7 +2502,7 @@ href="http://dept.math.lsa.umich.edu/seminars_events/events.php?eventdefid=9&amp
                           -webkit-text-stroke-width: 0px;
                           background-color: rgb(255, 255, 255);
                           text-decoration: none; display: inline
-                          !important; float: none;">Mérida, Mexico, Nov.
+                          !important; float: none;">MÃ©rida, Mexico, Nov.
                           7-12, 2024.</span></span></span></span></span></span></li>
             <li><a
 href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
