--- a/research.html
+++ b/research.html
@@ -14,7 +14,7 @@
           <tr>
             <td style="vertical-align: top; text-align: center;
               font-family: Avenir Book; width: 16%; color: black;
-              background-color: white;"><a href="default.html"
+              background-color: white;"><a href="index.html"
                 style="text-decoration: none;"><span style="color:
                   black;">ABOUT</span></a> </td>
             <td style="vertical-align: top; text-align: center;
