--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <td style="vertical-align: top; text-align: center;
               font-family: Avenir Book; width: 16%; color: black;
               font-weight: bold; background-color: white;"><a
-                href="default.html" style="text-decoration: none;"><span
+                href="index.html" style="text-decoration: none;"><span
                   style="color: black;">ABOUT</span></a> </td>
             <td style="vertical-align: top; text-align: center;
               font-family: Avenir Book; width: 16%; color: #cc0000;
