--- a/teaching.html
+++ b/teaching.html
@@ -1,196 +1,160 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html;
-      charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
     <title>Teaching</title>
+
+    <style type="text/css">
+      /* One font everywhere */
+      body {
+        font-family: "Avenir Book", Avenir, Helvetica, Arial, sans-serif;
+      }
+
+      .center { text-align: center; }
+
+      /* Navigation table */
+      .nav {
+        text-align: left;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .nav td {
+        vertical-align: top;
+        text-align: center;
+        background-color: white;
+      }
+      .nav a { text-decoration: none; color: black; }
+      .nav .active { font-weight: bold; }
+
+      /* Main content */
+      .content { text-align: left; }
+
+      /* Preserve the “blue bold” styling used for the video-clip labels */
+      .video-label { color: rgb(0, 3, 255); font-weight: bold; }
+
+      /* Keep the underlined BC link styling that was explicitly set */
+      .underline { text-decoration: underline; }
+    </style>
   </head>
+
   <body>
-    <div style="text-align: center;"> <img style="width: 400px; height:
-        229px;" alt="KL" src="images/KLlogo.jpg"><br>
-      <table style="text-align: left; width: 70%; margin-left: auto;
-        margin-right: auto;" cellspacing="2" cellpadding="0" border="0">
+    <div class="center">
+      <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
+
+      <table class="nav" cellspacing="2" cellpadding="0" border="0">
         <tbody>
           <tr>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 16%; color: black;
-              background-color: white;"><a href="index.html"
-                style="text-decoration: none;"><span style="color:
-                  black;">ABOUT</span></a> </td>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 16%; color: #cc0000;
-              background-color: white;"><a href="research.html"
-                style="text-decoration: none;"><span style="color:
-                  black;">RESEARCH</span></a> </td>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 16%; background-color:
-              white;"><a href="teaching.html" style="text-decoration:
-                none; font-weight: bold;"><span style="color: black;">TEACHING</span></a><br>
-            </td>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 16%; background-color:
-              white;"><a href="conferences.html" style="text-decoration:
-                none;"><span style="color: black;">CONFERENCES</span></a>
-            </td>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 16%; background-color:
-              white;"><a href="gallery.html" style="text-decoration:
-                none;"><span style="color: black;">GALLERY</span></a> </td>
-            <td style="vertical-align: top; text-align: center;
-              font-family: Avenir Book; width: 18%;"><a
-                href="otheracademic.html" style="text-decoration: none;"><span
-                  style="color: black;">OTHER&nbsp;</span></a> </td>
+            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
+
+            <!-- Keeping your original td color value (link text remains black by design) -->
+            <td style="width: 16%; color: #cc0000;"><a href="research.html">RESEARCH</a></td>
+
+            <td style="width: 16%;"><a class="active" href="teaching.html">TEACHING</a><br></td>
+
+            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
+
+            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
+
+            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
           </tr>
         </tbody>
       </table>
+
       <br>
       <hr style="width: 100%;"><br>
-      <div style="text-align: left; font-family: Avenir Book;">
+
+      <div class="content">
         <h3>Current teaching:</h3>
         <ul>
-          <li>Fall 2025 and Spring 2026: Math 3321-3322, Analysis I
-            &amp; II</li>
-          <li>Fall 2025: Math 8875: Topics in Deep Learning Theory<br>
-          </li>
+          <li>Fall 2025 and Spring 2026: Math 3321-3322, Analysis I &amp; II</li>
+          <li>Fall 2025: Math 8875: Topics in Deep Learning Theory<br></li>
         </ul>
-        <ul>
-        </ul>
-        <ul>
-        </ul>
-        <ul>
-        </ul>
+
         <h3>Past teaching:</h3>
-        At <a style="font-weight: bold;"
-          href="https://www.bc.edu/bc-web/schools/mcas/departments/math.html"
-          target="_blank"><span style="text-decoration: underline;">Boston
 
+        At
+        <a href="https://www.bc.edu/bc-web/schools/mcas/departments/math.html" target="_blank" style="font-weight: bold;">
+          <span class="underline">Boston College</span>
+        </a>:
+        <br>
 
-
-
-
-
-
-
-            College</span></a>: <br>
         <ul>
-          <li>Math 2216: Introduction to Abstract Mathematics, Spring
-            2024<br>
-          </li>
-          <li>Math 3322: Analysis II, Spring 2024<br>
-          </li>
+          <li>Math 2216: Introduction to Abstract Mathematics, Spring 2024<br></li>
+          <li>Math 3322: Analysis II, Spring 2024<br></li>
           <li>Math 3321: Analysis I, Fall 2023</li>
-          <li>Math 8810: Real Analysis, Fall 2023<br>
-          </li>
+          <li>Math 8810: Real Analysis, Fall 2023<br></li>
           <li>Math 2202: Multivariable Calculus, Spring 2023. </li>
           <li>Math 8810: Real Analysis, Fall 2022. </li>
           <li>Math 2202: Multivariable Calculus, Spring 2022.</li>
-          <li>Math 8892: Graduate Research Seminar, Springs
-            2018-present.<br>
-          </li>
-          <li>Math 8831: Geometry/Topology III ("Fractals"), Fall 2021.<br>
-          </li>
+          <li>Math 8892: Graduate Research Seminar, Springs 2018-present.<br></li>
+          <li>Math 8831: Geometry/Topology III ("Fractals"), Fall 2021.<br></li>
           <li>Math 8810: Real Analysis, Fall 2020.</li>
           <li>Math 3320: Introduction to Analysis, Fall 2020.</li>
-          <li>Math 2216: Introduction to Abstract Mathematics, Spring
-            2020.</li>
+          <li>Math 2216: Introduction to Abstract Mathematics, Spring 2020.</li>
           <li>Math 8810: Real Analysis, Fall 2019.</li>
-          <li>Math 1105: Calculus II - AP (for math/science majors),
-            Spring 2018.</li>
-          <li>Math 1102: Calculus I (Math/Science Majors), Fall 2017.<br>
-          </li>
-          <li>Math 8855: Topics in Geometry and Topology (dynamical
-            systems), Fall 2017.&nbsp; </li>
+          <li>Math 1105: Calculus II - AP (for math/science majors), Spring 2018.</li>
+          <li>Math 1102: Calculus I (Math/Science Majors), Fall 2017.<br></li>
+          <li>Math 8855: Topics in Geometry and Topology (dynamical systems), Fall 2017.&nbsp; </li>
         </ul>
-        At <a href="http://www.uchicago.edu/"><span style="font-weight:
-            bold;">University of Chicago</span>:</a><br>
+
+        At <a href="http://www.uchicago.edu/"><span style="font-weight: bold;">University of Chicago</span></a>:<br>
         <ul>
-          <li><a
-              href="http://www.math.uchicago.edu/ysp/summerschedule.html"
-              title="YSP" target="_blank">Young Scholars Program</a>,
-            9th/10th grades, July 1-26, 2019.</li>
-          <li><a href="http://math.uchicago.edu/ysp/" target="_blank">Young
-
-
-
-
-
-
-
-
-              Scholars Program</a>, 9th/10th grades, July 5-14, 2017.</li>
-          <li>Math 20500: Analysis in R^n III (accelerated), Spring
-            2017. </li>
+          <li><a href="http://www.math.uchicago.edu/ysp/summerschedule.html" title="YSP" target="_blank">Young Scholars Program</a>, 9th/10th grades, July 1-26, 2019.</li>
+          <li><a href="http://math.uchicago.edu/ysp/" target="_blank">Young Scholars Program</a>, 9th/10th grades, July 5-14, 2017.</li>
+          <li>Math 20500: Analysis in R^n III (accelerated), Spring 2017. </li>
           <li>U. Chicago REU: dynamical systems, Summer 2016. </li>
           <li>Math 20300: Analysis in R^n I, Spring 2016. </li>
           <li> Math 15300: Calculus III, Autumn 2016. </li>
-          <li><a href="https://math.uchicago.edu/%7Emathreu/REU2015/">U.
-              Chicago REU</a>: ergodic theory, Summer 2015</li>
+          <li><a href="https://math.uchicago.edu/%7Emathreu/REU2015/">U. Chicago REU</a>: ergodic theory, Summer 2015</li>
         </ul>
-        <div>At <a style="font-weight: bold;"
-            href="http://www.cornell.edu/">Cornell University</a>:</div>
+
+        <div>
+          At <a href="http://www.cornell.edu/" style="font-weight: bold;">Cornell University</a>:
+        </div>
         <ul>
-          <li>Math 1110: Calculus I, <strong style="font-weight:
-              normal;">Summer 2012</strong></li>
-          <li>TA for Math 2130: Calculus III, <strong
-              style="font-weight: normal;">Spring 2009</strong><br>
-          </li>
+          <li>Math 1110: Calculus I, <strong style="font-weight: normal;">Summer 2012</strong></li>
+          <li>TA for Math 2130: Calculus III, <strong style="font-weight: normal;">Spring 2009</strong><br></li>
           <li>TA for Math 1910: Calculus for Engineers, Fall 200 </li>
         </ul>
-        <div>At <a style="font-weight: bold;"
-            href="http://www.sea.edu/">Sea Education Association</a>:</div>
+
+        <div>
+          At <a href="http://www.sea.edu/" style="font-weight: bold;">Sea Education Association</a>:
+        </div>
         <div>
           <ul>
-            <li><strong style="font-weight: normal;">Summers 2003-2013</strong>:&nbsp;
-Mate
-
-
-
-
-
-
-
-
-              or deckhand on the <a
-                href="http://www.sea.edu/ships_crew/cramer"><em>SSV
-                  Corwith Cramer</em></a>, teaching nautical science and
-              navigation to graduate, college, and high school students.
-              &nbsp;Offshore programs one to six weeks in
-              duration.&nbsp;</li>
+            <li>
+              <strong style="font-weight: normal;">Summers 2003-2013</strong>:&nbsp;
+              Mate or deckhand on the
+              <a href="http://www.sea.edu/ships_crew/cramer"><em>SSV Corwith Cramer</em></a>,
+              teaching nautical science and navigation to graduate, college, and high school students.
+              &nbsp;Offshore programs one to six weeks in duration.&nbsp;
+            </li>
           </ul>
-          <strong style="color: rgb(0, 3, 255);">&nbsp;&nbsp;&nbsp;&nbsp;
 
+          <span class="video-label">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://www.dropbox.com/s/wlu0kkevvncmbmx/LifeRaftDiscussion.MP4" target="_blank">Video clip</a>
+          </span>
+          -&nbsp;teaching my "watch" how to launch a life raft in an abandon ship scenario:
+          <a href="https://www.dropbox.com/s/wlu0kkevvncmbmx/LifeRaftDiscussion.MP4" title="movie">click here</a>
+          <br>
 
+          <span class="video-label">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://www.dropbox.com/s/b1lldtb50555te9/MainslStrike.mov%22" target="_blank">Video clip</a>
+          </span>
+          - "calling" the striking and furling of the mains'l:
+          <a href="https://www.dropbox.com/s/b1lldtb50555te9/MainslStrike.mov" title="movie">click here</a>
+        </div>
 
+        <blockquote style="border: medium none; margin: 0px 0px 0px 40px; padding: 0px;"> </blockquote>
+        <blockquote style="border: medium none; margin: 0px 0px 0px 40px; padding: 0px;"> </blockquote>
 
-
-
-
-
-            &nbsp;&nbsp;&nbsp; <a
-              href="https://www.dropbox.com/s/wlu0kkevvncmbmx/LifeRaftDiscussion.MP4"
-              target="_blank">Video clip</a></strong> -&nbsp;teaching my
-          "watch" how to launch a life raft in an abandon ship scenario:
-          <a
-            href="https://www.dropbox.com/s/wlu0kkevvncmbmx/LifeRaftDiscussion.MP4"
-            title="movie">click here</a><span style="color: rgb(0, 3,
-            255);"><span class="Apple-tab-span" style="white-space: pre;"></span><strong>
-              &nbsp;&nbsp;&nbsp; <br>
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; <a
-                href="https://www.dropbox.com/s/b1lldtb50555te9/MainslStrike.mov%22"
-                target="_blank">Video clip</a></strong></span> -
-          "calling" the striking and furling of the mains'l: <a
-            href="https://www.dropbox.com/s/b1lldtb50555te9/MainslStrike.mov"
-            title="movie">click here</a> </div>
-        <blockquote style="border: medium none ; margin: 0px 0px 0px
-          40px; padding: 0px;"> </blockquote>
-        <blockquote style="border: medium none ; margin: 0px 0px 0px
-          40px; padding: 0px;"> </blockquote>
-        <br>
-        <br>
+        <br><br>
       </div>
-      <span style="font-family: Avenir Book;"> <br>
-        <br>
-        <br>
-      </span></div>
+
+      <br><br><br>
+    </div>
   </body>
 </html>
