--- a/research.html
+++ b/research.html
@@ -56,11 +56,11 @@
             <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
 
             <!-- Kept your original td color, though link text is black either way -->
-            <td style="width: 16%; color: #cc0000;"><a href="research.html">RESEARCH</a></td>
+            <td class="active" style="width: 16%; color: #cc0000;"><a href="research.html">RESEARCH</a></td>
 
             <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br></td>
 
-            <td class="active" style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
 
             <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
 
