--- a/index.html
+++ b/index.html
@@ -36,24 +36,26 @@
   </head>
 
   <body>
-    <div class="center">
-      <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
+<div class="center">
+  <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
 
-      <table class="nav" cellspacing="2" cellpadding="0" border="0">
-        <tbody>
-          <tr>
-            <td class="active" style="width: 16%;"><a href="index.html">ABOUT</a></td>
-            <td style="width: 16%; color: #cc0000;"><a href="research.html">RESEARCH</a></td>
-            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br></td>
-            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
-            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
-            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
-          </tr>
-        </tbody>
-      </table>
+  <table class="nav" cellspacing="2" cellpadding="0" border="0">
+    <tbody>
+      <tr>
+        <td class="active"><a href="index.html">ABOUT</a></td>
+        <td><a href="research.html">RESEARCH</a></td>
+        <td><a href="teaching.html">TEACHING</a></td>
+        <td><a href="conferences.html">CONFERENCES</a></td>
+        <td><a href="gallery.html">GALLERY</a></td>
+        <td><a href="otheracademic.html">OTHER&nbsp;</a></td>
+      </tr>
+    </tbody>
+  </table>
 
-      <br>
-      <hr style="width: 100%;"><br><br>
+  <br>
+  <hr style="width: 100%;"><br>
+</div>
+
 
       <table style="width: 100%;" border="0">
         <tbody>
