--- a/otheracademic.html
+++ b/otheracademic.html
@@ -37,29 +37,25 @@
 
   <body>
     <div class="center">
-      <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
+  <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
 
-      <table class="nav" cellspacing="2" cellpadding="0" border="0">
-        <tbody>
-          <tr>
-            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
+  <table class="nav" cellspacing="2" cellpadding="0" border="0">
+    <tbody>
+      <tr>
+        <td class="active"><a href="index.html">ABOUT</a></td>
+        <td><a href="research.html">RESEARCH</a></td>
+        <td><a href="teaching.html">TEACHING</a></td>
+        <td><a href="conferences.html">CONFERENCES</a></td>
+        <td><a href="gallery.html">GALLERY</a></td>
+        <td><a href="otheracademic.html">OTHER&nbsp;</a></td>
+      </tr>
+    </tbody>
+  </table>
 
-            <!-- Keeping your original td color value (link text remains black by design) -->
-            <td style="width: 16%; color: #cc0000;"><a href="research.html">RESEARCH</a></td>
+  <br>
+  <hr style="width: 100%;"><br>
+</div>
 
-            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br></td>
-
-            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
-
-            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
-
-            <td class="active" style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
-          </tr>
-        </tbody>
-      </table>
-
-      <br>
-      <hr style="width: 100%;"><br>
 
       <div class="content">
         <br>
