--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
     <title>Kathryn Lindsey</title>
-
     <style type="text/css">
       /* One font everywhere */
       body {
@@ -34,47 +34,48 @@
       .label { font-weight: bold; }
     </style>
   </head>
-
   <body>
-<div class="center">
-  <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
-
-  <table class="nav" cellspacing="2" cellpadding="0" border="0">
-    <tbody>
-      <tr>
-        <td class="active"><a href="index.html">ABOUT</a></td>
-        <td><a href="research.html">RESEARCH</a></td>
-        <td><a href="teaching.html">TEACHING</a></td>
-        <td><a href="conferences.html">CONFERENCES</a></td>
-        <td><a href="gallery.html">GALLERY</a></td>
-        <td><a href="otheracademic.html">OTHER&nbsp;</a></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <br>
-  <hr style="width: 100%;"><br>
-</div>
-
-
+    <div class="center"> <img style="width: 400px; height: 229px;"
+        alt="KL" src="images/KLlogo.jpg"><br>
+      <table class="nav" cellspacing="2" cellpadding="0" border="0">
+        <tbody>
+          <tr>
+            <td class="active" style="width: 16%;"><a href="index.html">ABOUT</a></td>
+            <!-- Kept your original td color, though link text is black either way -->
+            <td style="width: 16%; color: #cc0000;"><a
+                href="research.html">RESEARCH</a></td>
+            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br>
+            </td>
+            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
+            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <hr style="width: 100%;"><br>
       <table style="width: 100%;" border="0">
         <tbody>
           <tr>
-            <td style="text-align: center; width: 50%;">
-              <img src="images/headshot.jpg" alt="headshot photo" height="488" width="400"><br>
+            <td style="text-align: center; width: 50%;"> <img
+                src="images/headshot.jpg" alt="headshot photo"
+                width="400" height="488"><br>
             </td>
-
-            <td class="content" style="width: 50px;">
-              <span class="name">Kathryn Lindsey</span><br><br>
-
+            <td class="content" style="width: 50px;"> <span
+                class="name">Kathryn Lindsey</span><br>
+              <br>
               Associate Professor<br>
-              <a href="https://www.bc.edu/bc-web/schools/mcas/departments/math.html" target="_blank">Department of Mathematics</a><br>
-              Boston College<br><br>
-
+              <a
+                href="https://www.bc.edu/bc-web/schools/mcas/departments/math.html"
+                target="_blank">Department of Mathematics</a><br>
+              Boston College<br>
+              <br>
               <span class="label">Email:</span> lindseka at bc dot edu<br>
-              <span class="label">Office:</span> 567 Maloney Hall, Boston College<br><br>
-
-              <a href="LindseyCV.pdf">CV</a><br><br>
+              <span class="label">Office:</span> 567 Maloney Hall,
+              Boston College<br>
+              <br>
+              <a href="LindseyCV.pdf">CV</a><br>
+              <br>
             </td>
           </tr>
         </tbody>
@@ -82,4 +83,3 @@
     </div>
   </body>
 </html>
-
