--- a/otheracademic.html
+++ b/otheracademic.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
     <title>Other Academic</title>
-
     <style type="text/css">
       /* One font everywhere */
       body {
@@ -34,97 +34,135 @@
       .section-title { font-weight: bold; font-size: larger; }
     </style>
   </head>
-
   <body>
-    <div class="center">
-  <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
-
-  <table class="nav" cellspacing="2" cellpadding="0" border="0">
-    <tbody>
-      <tr>
-        <td class="active"><a href="index.html">ABOUT</a></td>
-        <td><a href="research.html">RESEARCH</a></td>
-        <td><a href="teaching.html">TEACHING</a></td>
-        <td><a href="conferences.html">CONFERENCES</a></td>
-        <td><a href="gallery.html">GALLERY</a></td>
-        <td><a href="otheracademic.html">OTHER&nbsp;</a></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <br>
-  <hr style="width: 100%;"><br>
-</div>
-
-
-      <div class="content">
-        <br>
-
+    <div class="center"> <img style="width: 400px; height: 229px;"
+        alt="KL" src="images/KLlogo.jpg"><br>
+      <table class="nav" cellspacing="2" cellpadding="0" border="0">
+        <tbody>
+          <tr>
+            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
+            <!-- Kept your original td color, though link text is black either way -->
+            <td style="width: 16%; color: #cc0000;"><a
+                href="research.html">RESEARCH</a></td>
+            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br>
+            </td>
+            <td style="width: 16%;"><a href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
+            <td class="active" style="width: 18%;"><a
+                href="otheracademic.html">OTHER&nbsp;</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <hr style="width: 100%;"><br>
+      <div class="content"> <br>
         <div class="section-title">Seminars:</div>
         <br>
-
         <ul>
-          <li><span style="font-size: larger;"><small>Boston College <a href="https://ianbiringer.net/seminar.html">Geometry/Topology/Dynamics Seminar</a><br></small></span></li>
-          <li>Boston College <a href="https://sites.google.com/view/bcmmlseminar/">Math &amp; Machine Learning Seminar</a><br></li>
-        </ul>
+          <li><span style="font-size: larger;"><small>Boston College <a
+                  href="https://ianbiringer.net/seminar.html">Geometry/Topology/Dynamics
 
+
+
+
+
+                  Seminar</a><br>
+              </small></span></li>
+          <li>Boston College <a
+              href="https://sites.google.com/view/bcmmlseminar/">Math
+              &amp; Machine Learning Seminar</a><br>
+          </li>
+        </ul>
         <div class="section-title">This 'n That:</div>
-
         <ul>
-          <li>
-            I'm on advisory board for the
-            <a href="http://www.ams.org/programs/research-communities/mrc">AMS Mathematics Research Communities</a>.&nbsp;
-            I benefited from participating in two MRC programs as a student.&nbsp; <br>
-          </li>
+          <li> I'm on advisory board for the <a
+              href="http://www.ams.org/programs/research-communities/mrc">AMS
 
-          <li>
-            <a href="https://www.youtube.com/watch?v=baP86ww6f60" target="_blank">Dynamical Roots</a>, a public lecture.&nbsp;
-            <br>
-          </li>
 
-          <li>
-            I organized a year-long series of events about
-            <a href="https://www.bc.edu/centers/ila/events/women-in-stem.html">Women in STEM</a>
-            at BC during the 2018-2019 academic year funded by a grant from the
-            <a href="https://www.bc.edu/centers/ila.html" target="_blank">ILA</a>.
-          </li>
 
-          <li>
-            AWM: I am a co-founder and former president of the
-            <a style="font-weight: normal;" href="http://www.math.cornell.edu/%7Eawm/">Cornell Student Chapter of the Association for Women in Mathematics</a><span style="font-weight: normal;">.&nbsp;
-            The Cornell Chronicle made this </span><a style="font-weight: normal;" href="https://www.dropbox.com/s/qtu6kg5ucmgmf2t/PiDayVideo.m4v" title="Pi Day Video">video</a><span style="font-weight: normal;">
-            &nbsp;of our 2012 Pi Day pie-eating contest.&nbsp;&nbsp;</span>
-          </li>
 
-          <li>
-            Math Explorers Club: The&nbsp;<a href="http://www.math.cornell.edu/%7Emec/">Math Explorers Club</a> is a collection of materials designed to give middle school and high school students an introduction to interesting and advanced topics in mathematics.&nbsp;
-            I wrote the module <em><a href="http://www.math.cornell.edu/%7Emec/2008-2009/KathrynLindsey/PROJECT/homepage.html">An Introduction to Tilings</a></em>.
-          </li>
 
-          <li>
-            Who Wants to Be a Mathematician?&nbsp; I made a
-            <a href="https://www.youtube.com/watch?v=NSARpZHPpe8" target="_blank">cameo appearance</a>
-            in the 2015 AMS production of "
-            <a href="http://www.ams.org/programs/students/wwtbam/wwtbam">Who Wants to Be a Mathematician?</a>"
-            <br>
+              Mathematics Research Communities</a>.&nbsp; I benefited
+            from participating in two MRC programs as a student.&nbsp; <br>
           </li>
+          <li> <a href="https://www.youtube.com/watch?v=baP86ww6f60"
+              target="_blank">Dynamical Roots</a>, a public
+            lecture.&nbsp; <br>
+          </li>
+          <li> I organized a year-long series of events about <a
+              href="https://www.bc.edu/centers/ila/events/women-in-stem.html">Women
 
-          <li>
-            I make <a href="https://sites.google.com/view/manifold-pottery-kl/home">pottery</a>.
+
+
+
+
+              in STEM</a> at BC during the 2018-2019 academic year
+            funded by a grant from the <a
+              href="https://www.bc.edu/centers/ila.html" target="_blank">ILA</a>.
+          </li>
+          <li> AWM: I am a co-founder and former president of the <a
+              style="font-weight: normal;"
+              href="http://www.math.cornell.edu/%7Eawm/">Cornell Student
+              Chapter of the Association for Women in Mathematics</a><span
+              style="font-weight: normal;">.&nbsp; The Cornell Chronicle
+              made this </span><a style="font-weight: normal;"
+              href="https://www.dropbox.com/s/qtu6kg5ucmgmf2t/PiDayVideo.m4v"
+              title="Pi Day Video">video</a><span style="font-weight:
+              normal;"> &nbsp;of our 2012 Pi Day pie-eating
+              contest.&nbsp;&nbsp;</span> </li>
+          <li> Math Explorers Club: The&nbsp;<a
+              href="http://www.math.cornell.edu/%7Emec/">Math Explorers
+              Club</a> is a collection of materials designed to give
+            middle school and high school students an introduction to
+            interesting and advanced topics in mathematics.&nbsp; I
+            wrote the module <em><a
+href="http://www.math.cornell.edu/%7Emec/2008-2009/KathrynLindsey/PROJECT/homepage.html">An
+
+
+
+
+
+                Introduction to Tilings</a></em>. </li>
+          <li> Who Wants to Be a Mathematician?&nbsp; I made a <a
+              href="https://www.youtube.com/watch?v=NSARpZHPpe8"
+              target="_blank">cameo appearance</a> in the 2015 AMS
+            production of " <a
+              href="http://www.ams.org/programs/students/wwtbam/wwtbam">Who
+
+
+
+
+
+              Wants to Be a Mathematician?</a>" <br>
+          </li>
+          <li> I make <a
+              href="https://sites.google.com/view/manifold-pottery-kl/home">pottery</a>.
             <br>
           </li>
         </ul>
-
         <div class="section-title">Mentors:</div>
         <ul>
-          <li><a href="http://www1.math.cornell.edu/m/People/bynetid/jhh8" target="_blank">John Hubbard</a> (graduate school)<br></li>
-          <li><a href="https://warwick.ac.uk/fac/sci/maths/people/staff/john_smillie/" target="_blank">John Smillie</a> (phd advisor)</li>
-          <li><a href="https://web.williams.edu/Mathematics/csilva/" target="_blank">Cesar Silva</a> (undergrad advisor)</li>
-          <li><a href="https://en.wikipedia.org/wiki/William_Thurston">William Thurston</a> (graduate school)</li>
-          <li><a href="https://math.uchicago.edu/%7Ewilkinso/" target="_blank">Amie Wilkinson</a> (postdoc mentor)</li>
-        </ul>
+          <li><a
+              href="http://www1.math.cornell.edu/m/People/bynetid/jhh8"
+              target="_blank">John Hubbard</a> (graduate school)<br>
+          </li>
+          <li><a
+              href="https://warwick.ac.uk/fac/sci/maths/people/staff/john_smillie/"
+              target="_blank">John Smillie</a> (phd advisor)</li>
+          <li><a href="https://web.williams.edu/Mathematics/csilva/"
+              target="_blank">Cesar Silva</a> (undergrad advisor)</li>
+          <li><a href="https://en.wikipedia.org/wiki/William_Thurston">William
 
-        <br><br>
+
+
+
+
+              Thurston</a> (graduate school)</li>
+          <li><a href="https://math.uchicago.edu/%7Ewilkinso/"
+              target="_blank">Amie Wilkinson</a> (postdoc mentor)</li>
+        </ul>
+        <br>
+        <br>
       </div>
     </div>
   </body>
