--- a/conferences.html
+++ b/conferences.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
     <title>Conferences</title>
-
     <style type="text/css">
       /* One font everywhere */
       body {
@@ -34,118 +34,287 @@
       .size-16 { font-size: 16px; }
     </style>
   </head>
-
   <body>
-    <div class="center">
-  <img style="width: 400px; height: 229px;" alt="KL" src="images/KLlogo.jpg"><br>
-
-  <table class="nav" cellspacing="2" cellpadding="0" border="0">
-    <tbody>
-      <tr>
-        <td class="active"><a href="index.html">ABOUT</a></td>
-        <td><a href="research.html">RESEARCH</a></td>
-        <td><a href="teaching.html">TEACHING</a></td>
-        <td><a href="conferences.html">CONFERENCES</a></td>
-        <td><a href="gallery.html">GALLERY</a></td>
-        <td><a href="otheracademic.html">OTHER&nbsp;</a></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <br>
-  <hr style="width: 100%;"><br>
-</div>
-
-
-
+    <div class="center"> <img style="width: 400px; height: 229px;"
+        alt="KL" src="images/KLlogo.jpg"><br>
+      <table class="nav" cellspacing="2" cellpadding="0" border="0">
+        <tbody>
+          <tr>
+            <td style="width: 16%;"><a href="index.html">ABOUT</a></td>
+            <!-- Kept your original td color, though link text is black either way -->
+            <td style="width: 16%; color: #cc0000;"><a
+                href="research.html">RESEARCH</a></td>
+            <td style="width: 16%;"><a href="teaching.html">TEACHING</a><br>
+            </td>
+            <td class="active" style="width: 16%;"><a
+                href="conferences.html">CONFERENCES</a></td>
+            <td style="width: 16%;"><a href="gallery.html">GALLERY</a></td>
+            <td style="width: 18%;"><a href="otheracademic.html">OTHER&nbsp;</a></td>
+          </tr>
+        </tbody>
+      </table>
+      <br>
+      <hr style="width: 100%;"><br>
       <div class="content">
         <h3>Recent and Upcoming Conferences, Seminars &amp; Workshops:</h3>
         (*)<span style="font-style: italic;"> denotes invited talk, </span><br>
-
         <ul>
-          <li>*<a href="https://neuralpolytopes.gitlab.io/workshop2026/">Workshop on Polyhedral Geometry for Neural Networks</a>, University of Technology Nuremberg, Germany, Mar. 16-20, 2026. <br></li>
-          <li>*Williams College Math Faculty Seminar, Mar. 13, 2026. <br></li>
-          <li>*<a href="https://www.ams.org/meetings/sectional/2331_program_saturday.html">Special Session on Arithmetic Dynamics</a>, AMS Sectional Meeting at Boston College, March 28-29, 2026 <br></li>
-          <li>*<a href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar-dynamics/">TUM Oberseminar Dynamics</a>, Technische Universit&auml;t M&uuml;nchen, Nov. 3, 2025. <br></li>
-          <li>Collaboration on Mathematical and Scientific Foundations of Deep Learning Annual Meeting, Simons Foundation, Sep. 25-27, 2025. <br></li>
-          <li>*<a href="http://www.fields.utoronto.ca/activities/25-26/neuroscience-TDA">Workshop on Topological Data Analysis</a>, Fields Institute, Aug. 25-29, 2025. </li>
-          <li>*<a href="https://indico.math.cnrs.fr/event/12318/">JHH 80 Dynamical Developments: Degenerations of Flat Surfaces and Rational Maps</a>, Institut de Mathematiques de Toulouse, Jun. 10-13, 2025. <br></li>
+          <li>*<a href="https://neuralpolytopes.gitlab.io/workshop2026/">Workshop
 
-          <li>*Trinity College Dublin/Boston College Paired Colloquium Talk, Boston College, Apr. 28, 2025.&nbsp;</li>
-          <li>*<a href="https://seminargeotop-a.com">GEOTOP-A Seminar</a>, Apr. 25, 2025.</li>
-          <li>*<a href="https://sites.brown.edu/joint-dynamics-seminar/">New England Dynamics Seminar</a>, Apr. 11, 2025. <br></li>
-          <li>*<a href="https://bostonsymmetry.github.io">Boston Symmetry Day</a>, Northeastern U., Mar. 31, 2025. <br></li>
-          <li>*Virtual talk at Universidad Juarez del Estado de Durango, Mar. 12, 2025.</li>
-          <li>*<a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss21.html#title">Special Session on Arithmetic Dynamics of Single and Multiple Maps, Joint Math Meetings</a>, Seattle, Jan. 8, 2025. <br></li>
 
-          <li class="size-16">
-            *Minicourse, Applications of Topology to Neural Networks,
-            <a href="https://applied-topology-school.eventos.cimat.mx">CIMAT-M&eacute;rida Applied Topology School</a>,
-            Unidad M&eacute;rida, Mexico, Nov. 7-12, 2024.
-            <br>
+
+
+
+              on Polyhedral Geometry for Neural Networks</a>, University
+            of Technology Nuremberg, Germany, Mar. 16-20, 2026. <br>
           </li>
+          <li>*Williams College Math Faculty Seminar, Mar. 13, 2026. <br>
+          </li>
+          <li>*<a
+              href="https://www.ams.org/meetings/sectional/2331_program_saturday.html">Special
 
-          <li>*<a href="https://math.dartmouth.edu/calendar/agenda-colloq.php">Colloquium</a>, Dartmouth College, Nov. 7, 2024. <br></li>
-          <li>*Neural Network Theory Seminar, Brown U., Oct. 21, 2024. <br></li>
 
-          <li>*Colloquium at <a href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/center-for-computing-sciences">Center for Computing Sciences</a>, Institute for Defense Analysis, Maryland, May 23, 2024. <br></li>
 
-          <li>*<a href="https://sites.google.com/view/nywamconference/home?authuser=0">Mina Rees NY Women and Math Conference</a>, keynote, C.U.N.Y., Mar. 2, 2024.</li>
 
-          <li>*<a href="http://userhome.brooklyn.cuny.edu/aulicino/seminar/">Complex Analysis &amp; Dynamics Seminar</a>, C.U.N.Y., Mar. 1, 2024.<br></li>
 
-          <li>*Guest lecture, Math 1702: The Making of the Moral Mind, B.C., Jan. 25, 2024. <br></li>
+              Session on Arithmetic Dynamics</a>, AMS Sectional Meeting
+            at Boston College, March 28-29, 2026 <br>
+          </li>
+          <li>*<a
+href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar-dynamics/">TUM
 
-          <li><a href="https://mathml2023.caltech.edu">Mathematics and Machine Learning</a>, Caltech, Dec. 10-13, 2023.<br></li>
 
-          <li><a href="https://icerm.brown.edu/programs/sp-f23/">Math+Neuroscience Semester Program</a>, ICERM, Sep.-Dec. 2023.</li>
 
-          <li>*Open Problems Seminar, ICERM, Nov. 9, 2023.<br></li>
 
-          <li>*<a href="https://www.math.brown.edu/reschwar/seminar.html">GeomTop Seminar</a>, Brown University, Nov. 1, 2023. <br></li>
 
-          <li>*<a href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/mathematics-colloquium">Colloquium</a>, George Mason U., Sep. 15, 2023.</li>
+              Oberseminar Dynamics</a>, Technische Universität München,
+            Nov. 3, 2025. <br>
+          </li>
+          <li>Collaboration on Mathematical and Scientific Foundations
+            of Deep Learning Annual Meeting, Simons Foundation, Sep.
+            25-27, 2025. <br>
+          </li>
+          <li>*<a
+              href="http://www.fields.utoronto.ca/activities/25-26/neuroscience-TDA">Workshop
 
-          <li><a href="https://icml.cc">International Conference on Machine Learning (ICML)</a>, Poster Presentation, Honolulu, HI, July 22-29, 2023. <br></li>
 
-          <li>*<a href="http://math.bu.edu/dynamics/seminar.html">Dynamics Seminar</a>, Boston U., Apr. 3, 2023. <br></li>
 
-          <li><a href="(https://www.oneworldml.org/">*One World Seminar Series on the Mathematics of Machine Learning</a>, Mar. 29, 2023.<br></li>
 
-          <li>*<a href="http://dynamicalweekend.conference.wesleyan.edu">A Dynamical Weekend at Wesleyan</a>, Mar. 4-5, 2023. <br></li>
 
-          <li>*<a href="https://meetings.ams.org/math/jmm2022/meetingapp.cgi/Session/3490">AMS Special Session on Topology, Algebra, and Geometry in the Mathematics of Data Science</a>, Joint Math Meetings, Boston, Jan 5-6, 2023. <br></li>
+              on Topological Data Analysis</a>, Fields Institute, Aug.
+            25-29, 2025. </li>
+          <li>*<a href="https://indico.math.cnrs.fr/event/12318/">JHH 80
+              Dynamical Developments: Degenerations of Flat Surfaces and
+              Rational Maps</a>, Institut de Mathematiques de Toulouse,
+            Jun. 10-13, 2025. <br>
+          </li>
+          <li>*Trinity College Dublin/Boston College Paired Colloquium
+            Talk, Boston College, Apr. 28, 2025.&nbsp;</li>
+          <li>*<a href="https://seminargeotop-a.com">GEOTOP-A Seminar</a>,
+            Apr. 25, 2025.</li>
+          <li>*<a href="https://sites.brown.edu/joint-dynamics-seminar/">New
+
+
+
+
+
+              England Dynamics Seminar</a>, Apr. 11, 2025. <br>
+          </li>
+          <li>*<a href="https://bostonsymmetry.github.io">Boston
+              Symmetry Day</a>, Northeastern U., Mar. 31, 2025. <br>
+          </li>
+          <li>*Virtual talk at Universidad Juarez del Estado de Durango,
+            Mar. 12, 2025.</li>
+          <li>*<a
+href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss21.html#title">Special
+
+
+
+
+
+              Session on Arithmetic Dynamics of Single and Multiple
+              Maps, Joint Math Meetings</a>, Seattle, Jan. 8, 2025. <br>
+          </li>
+          <li class="size-16"> *Minicourse, Applications of Topology to
+            Neural Networks, <a
+              href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+
+
+
+
+
+              Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
+            7-12, 2024. <br>
+          </li>
+          <li>*<a
+              href="https://math.dartmouth.edu/calendar/agenda-colloq.php">Colloquium</a>,
+            Dartmouth College, Nov. 7, 2024. <br>
+          </li>
+          <li>*Neural Network Theory Seminar, Brown U., Oct. 21, 2024. <br>
+          </li>
+          <li>*Colloquium at <a
+href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/center-for-computing-sciences">Center
+
+
+
+
+
+              for Computing Sciences</a>, Institute for Defense
+            Analysis, Maryland, May 23, 2024. <br>
+          </li>
+          <li>*<a
+              href="https://sites.google.com/view/nywamconference/home?authuser=0">Mina
+
+
+
+
+
+              Rees NY Women and Math Conference</a>, keynote, C.U.N.Y.,
+            Mar. 2, 2024.</li>
+          <li>*<a
+              href="http://userhome.brooklyn.cuny.edu/aulicino/seminar/">Complex
+
+
+
+
+
+              Analysis &amp; Dynamics Seminar</a>, C.U.N.Y., Mar. 1,
+            2024.<br>
+          </li>
+          <li>*Guest lecture, Math 1702: The Making of the Moral Mind,
+            B.C., Jan. 25, 2024. <br>
+          </li>
+          <li><a href="https://mathml2023.caltech.edu">Mathematics and
+              Machine Learning</a>, Caltech, Dec. 10-13, 2023.<br>
+          </li>
+          <li><a href="https://icerm.brown.edu/programs/sp-f23/">Math+Neuroscience
+
+
+
+
+
+              Semester Program</a>, ICERM, Sep.-Dec. 2023.</li>
+          <li>*Open Problems Seminar, ICERM, Nov. 9, 2023.<br>
+          </li>
+          <li>*<a
+              href="https://www.math.brown.edu/reschwar/seminar.html">GeomTop
+
+
+
+
+
+              Seminar</a>, Brown University, Nov. 1, 2023. <br>
+          </li>
+          <li>*<a
+href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/mathematics-colloquium">Colloquium</a>,
+            George Mason U., Sep. 15, 2023.</li>
+          <li><a href="https://icml.cc">International Conference on
+              Machine Learning (ICML)</a>, Poster Presentation,
+            Honolulu, HI, July 22-29, 2023. <br>
+          </li>
+          <li>*<a href="http://math.bu.edu/dynamics/seminar.html">Dynamics
+
+
+
+              Seminar</a>, Boston U., Apr. 3, 2023. <br>
+          </li>
+          <li><a href="(https://www.oneworldml.org/">*One World Seminar
+              Series on the Mathematics of Machine Learning</a>, Mar.
+            29, 2023.<br>
+          </li>
+          <li>*<a href="http://dynamicalweekend.conference.wesleyan.edu">A
+              Dynamical Weekend at Wesleyan</a>, Mar. 4-5, 2023. <br>
+          </li>
+          <li>*<a
+              href="https://meetings.ams.org/math/jmm2022/meetingapp.cgi/Session/3490">AMS
+
+
+
+
+
+              Special Session on Topology, Algebra, and Geometry in the
+              Mathematics of Data Science</a>, Joint Math Meetings,
+            Boston, Jan 5-6, 2023. <br>
+          </li>
         </ul>
-
         <div>
           <h3>Conference Organization:</h3>
           <ul>
-            <li class="size-16">
-              <a href="https://applied-topology-school.eventos.cimat.mx">CIMAT-M&eacute;rida Applied Topology School</a>,
-              Unidad M&eacute;rida, Mexico, Nov. 7-12, 2024.
+            <li class="size-16"> <a
+                href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+
+
+
+
+
+                Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
+              7-12, 2024. </li>
+            <li><a
+href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
+
+
+
+
+
+                Special Session on Geometric and Combinatorial Methods
+                in Deep Learning Theory</a>, Joint Math Meetings,
+              Seattle, Jan. 9, 2025. <br>
             </li>
+            <li><a
+href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss57.html#title">AMS
 
-            <li><a href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS Special Session on Geometric and Combinatorial Methods in Deep Learning Theory</a>, Joint Math Meetings, Seattle, Jan. 9, 2025. <br></li>
 
-            <li><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss57.html#title">AMS Special Session on Dynamics, Geometry, and Group Actions</a>, Joint Math. Meetings, Boston, Jan 4-5, 2023. <br></li>
 
-            <li><a href="https://www.ams.org/meetings/sectional/2275_program_ss4.html#title" title="special session" target="_blank">AMS Special Session on Geometric Dynamics and Billiards</a>, <a href="https://www.ams.org/meetings/sectional/2275_special.html">AMS Spring Sectional Meeting</a>, virtual, Mar. 19-20, 2022. <br></li>
 
-            <li><a href="https://www.maths.tcd.ie/%7Ehmi/events/gt/gt2018.htm" target="_blank">14th William Rowan Hamilton Geometry and Topology Workshop: Group Actions and Ergodic Theory in Geometry and Topology</a>, Trinity College, Dublin, Ireland, Jul. 30-Aug. 3, 2018.<br></li>
 
-            <li><a href="http://jointmathematicsmeetings.org/meetings/national/jmm2018/2197_program_ss16.html#title" target="_blank">JMM AMS Special Session on Dynamical Systems: Smooth, Symbolic and Measurable</a>, Joint Math. Meetings, San Diego, Jan 11, 2018. <br></li>
+                Special Session on Dynamics, Geometry, and Group Actions</a>,
+              Joint Math. Meetings, Boston, Jan 4-5, 2023. <br>
+            </li>
+            <li><a
+href="https://www.ams.org/meetings/sectional/2275_program_ss4.html#title"
+                title="special session" target="_blank">AMS Special
+                Session on Geometric Dynamics and Billiards</a>, <a
+                href="https://www.ams.org/meetings/sectional/2275_special.html">AMS
 
-            <li><a href="http://www.math.cornell.edu/%7Ethurston">What's Next? The legacy of Bill Thurston</a>, Cornell University, June 23-27, 2014. Local organizing committee. I had fun making the <a href="http://www.math.cornell.edu/%7Ethurston/poster.pdf" title="poster">poster</a>. <br></li>
+
+
+
+
+                Spring Sectional Meeting</a>, virtual, Mar. 19-20, 2022.
+              <br>
+            </li>
+            <li><a
+                href="https://www.maths.tcd.ie/%7Ehmi/events/gt/gt2018.htm"
+                target="_blank">14th William Rowan Hamilton Geometry and
+                Topology Workshop: Group Actions and Ergodic Theory in
+                Geometry and Topology</a>, Trinity College, Dublin,
+              Ireland, Jul. 30-Aug. 3, 2018.<br>
+            </li>
+            <li><a
+href="http://jointmathematicsmeetings.org/meetings/national/jmm2018/2197_program_ss16.html#title"
+                target="_blank">JMM AMS Special Session on Dynamical
+                Systems: Smooth, Symbolic and Measurable</a>, Joint
+              Math. Meetings, San Diego, Jan 11, 2018. <br>
+            </li>
+            <li><a href="http://www.math.cornell.edu/%7Ethurston">What's
+                Next? The legacy of Bill Thurston</a>, Cornell
+              University, June 23-27, 2014. Local organizing committee.
+              I had fun making the <a
+                href="http://www.math.cornell.edu/%7Ethurston/poster.pdf"
+                title="poster">poster</a>. <br>
+            </li>
           </ul>
         </div>
-
         <br>
       </div>
-
-      <br><br><br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
-
-    <br><br><br><br><br>
   </body>
 </html>
-
