--- a/conferences.html
+++ b/conferences.html
@@ -60,11 +60,6 @@
         (*)<span style="font-style: italic;"> denotes invited talk, </span><br>
         <ul>
           <li>*<a href="https://neuralpolytopes.gitlab.io/workshop2026/">Workshop
-
-
-
-
-
               on Polyhedral Geometry for Neural Networks</a>, University
             of Technology Nuremberg, Germany, Mar. 16-20, 2026. <br>
           </li>
@@ -77,11 +72,18 @@
 
 
 
+
+
               Session on Arithmetic Dynamics</a>, AMS Sectional Meeting
             at Boston College, March 28-29, 2026 <br>
           </li>
+          <li>*Workshop on Rational Maps, Boston College, Dec. 13-14,
+            2025<br>
+          </li>
           <li>*<a
 href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar-dynamics/">TUM
+
+
 
 
 
@@ -96,6 +98,8 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
           </li>
           <li>*<a
               href="http://www.fields.utoronto.ca/activities/25-26/neuroscience-TDA">Workshop
+
+
 
 
 
@@ -118,6 +122,8 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
+
+
               England Dynamics Seminar</a>, Apr. 11, 2025. <br>
           </li>
           <li>*<a href="https://bostonsymmetry.github.io">Boston
@@ -132,12 +138,16 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
 
 
 
+
+
               Session on Arithmetic Dynamics of Single and Multiple
               Maps, Joint Math Meetings</a>, Seattle, Jan. 8, 2025. <br>
           </li>
           <li class="size-16"> *Minicourse, Applications of Topology to
             Neural Networks, <a
               href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+
+
 
 
 
@@ -159,6 +169,8 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               for Computing Sciences</a>, Institute for Defense
             Analysis, Maryland, May 23, 2024. <br>
           </li>
@@ -169,10 +181,14 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               Rees NY Women and Math Conference</a>, keynote, C.U.N.Y.,
             Mar. 2, 2024.</li>
           <li>*<a
               href="http://userhome.brooklyn.cuny.edu/aulicino/seminar/">Complex
+
+
 
 
 
@@ -193,11 +209,15 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
+
               Semester Program</a>, ICERM, Sep.-Dec. 2023.</li>
           <li>*Open Problems Seminar, ICERM, Nov. 9, 2023.<br>
           </li>
           <li>*<a
               href="https://www.math.brown.edu/reschwar/seminar.html">GeomTop
+
+
 
 
 
@@ -216,6 +236,8 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
+
               Seminar</a>, Boston U., Apr. 3, 2023. <br>
           </li>
           <li><a href="(https://www.oneworldml.org/">*One World Seminar
@@ -227,6 +249,8 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
           </li>
           <li>*<a
               href="https://meetings.ams.org/math/jmm2022/meetingapp.cgi/Session/3490">AMS
+
+
 
 
 
@@ -247,10 +271,14 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
+
                 Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
               7-12, 2024. </li>
             <li><a
 href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
+
+
 
 
 
@@ -267,6 +295,8 @@ href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_pr
 
 
 
+
+
                 Special Session on Dynamics, Geometry, and Group Actions</a>,
               Joint Math. Meetings, Boston, Jan 4-5, 2023. <br>
             </li>
@@ -275,6 +305,8 @@ href="https://www.ams.org/meetings/sectional/2275_program_ss4.html#title"
                 title="special session" target="_blank">AMS Special
                 Session on Geometric Dynamics and Billiards</a>, <a
                 href="https://www.ams.org/meetings/sectional/2275_special.html">AMS
+
+
 
 
 
@@ -307,11 +339,6 @@ href="http://jointmathematicsmeetings.org/meetings/national/jmm2018/2197_program
         </div>
         <br>
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
       <br>
       <br>
       <br>
