--- a/conferences.html
+++ b/conferences.html
@@ -59,7 +59,15 @@
         <h3>Recent and Upcoming Conferences, Seminars &amp; Workshops:</h3>
         (*)<span style="font-style: italic;"> denotes invited talk, </span><br>
         <ul>
+          <li>*Wallenberg Advanced Scientific Forum on Symmetries in
+            Neural Networks, Stockholm, Sweden, Sep. 28-Oct. 2, 2026. <br>
+          </li>
+          <li>&nbsp;Minisymposium on Algebro-geometric Methods in Deep
+            Learning, SIAM Annual Meeting, Cleveland OH, July 6-10,
+            2026.<br>
+          </li>
           <li>*<a href="https://neuralpolytopes.gitlab.io/workshop2026/">Workshop
+
               on Polyhedral Geometry for Neural Networks</a>, University
             of Technology Nuremberg, Germany, Mar. 16-20, 2026. <br>
           </li>
@@ -67,6 +75,7 @@
           </li>
           <li>*<a
               href="https://www.ams.org/meetings/sectional/2331_program_saturday.html">Special
+
 
 
 
@@ -89,6 +98,7 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
+
               Oberseminar Dynamics</a>, Technische Universität München,
             Nov. 3, 2025. <br>
           </li>
@@ -98,6 +108,7 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
           </li>
           <li>*<a
               href="http://www.fields.utoronto.ca/activities/25-26/neuroscience-TDA">Workshop
+
 
 
 
@@ -124,6 +135,7 @@ href="https://www.math.cit.tum.de/math/forschung/kolloquium-seminare/oberseminar
 
 
 
+
               England Dynamics Seminar</a>, Apr. 11, 2025. <br>
           </li>
           <li>*<a href="https://bostonsymmetry.github.io">Boston
@@ -140,12 +152,14 @@ href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_progra
 
 
 
+
               Session on Arithmetic Dynamics of Single and Multiple
               Maps, Joint Math Meetings</a>, Seattle, Jan. 8, 2025. <br>
           </li>
           <li class="size-16"> *Minicourse, Applications of Topology to
             Neural Networks, <a
               href="https://applied-topology-school.eventos.cimat.mx">CIMAT-Mérida
+
 
 
 
@@ -171,6 +185,7 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
               for Computing Sciences</a>, Institute for Defense
             Analysis, Maryland, May 23, 2024. <br>
           </li>
@@ -183,10 +198,12 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
               Rees NY Women and Math Conference</a>, keynote, C.U.N.Y.,
             Mar. 2, 2024.</li>
           <li>*<a
               href="http://userhome.brooklyn.cuny.edu/aulicino/seminar/">Complex
+
 
 
 
@@ -211,11 +228,13 @@ href="https://www.ida.org/en/ida-ffrdcs/center-for-communications-and-computing/
 
 
 
+
               Semester Program</a>, ICERM, Sep.-Dec. 2023.</li>
           <li>*Open Problems Seminar, ICERM, Nov. 9, 2023.<br>
           </li>
           <li>*<a
               href="https://www.math.brown.edu/reschwar/seminar.html">GeomTop
+
 
 
 
@@ -238,6 +257,7 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
               Seminar</a>, Boston U., Apr. 3, 2023. <br>
           </li>
           <li><a href="(https://www.oneworldml.org/">*One World Seminar
@@ -249,6 +269,7 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
           </li>
           <li>*<a
               href="https://meetings.ams.org/math/jmm2022/meetingapp.cgi/Session/3490">AMS
+
 
 
 
@@ -273,10 +294,12 @@ href="https://science.gmu.edu/academics/departments-units/mathematical-sciences/
 
 
 
+
                 Applied Topology School</a>, Unidad Mérida, Mexico, Nov.
               7-12, 2024. </li>
             <li><a
 href="https://meetings.ams.org/math/jmm2025/meetingapp.cgi/Session/11501">AMS
+
 
 
 
@@ -297,6 +320,7 @@ href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_pr
 
 
 
+
                 Special Session on Dynamics, Geometry, and Group Actions</a>,
               Joint Math. Meetings, Boston, Jan 4-5, 2023. <br>
             </li>
@@ -305,6 +329,7 @@ href="https://www.ams.org/meetings/sectional/2275_program_ss4.html#title"
                 title="special session" target="_blank">AMS Special
                 Session on Geometric Dynamics and Billiards</a>, <a
                 href="https://www.ams.org/meetings/sectional/2275_special.html">AMS
+
 
 
 
